test/data/syntax-errors/while-without-colon.jen
x := 1
while x < 5
    x ++
